--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body {
 #header{
   
   height:550px;
-  background-image:url(/pexels-pixabay-38238.jpg);
+  background-image:url("/css/pexels-pixabay-38238.jpg");
    background-repeat: no-repeat;
   
       background-size:2300px;
